Adding edit of company information
